--- a/static/index.html
+++ b/static/index.html
@@ -33,12 +33,15 @@
 <body ng-cloak>
 
   <!-- Page Content -->
-  <div class="container" id="home" ng-controller="MainCtrl">
+  <div class="container" id="home">
 
     <!-- Page Header -->
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="page-header">Diana Won
+        <h1 class="page-header">
+          <a href="#/">
+            Diana Won
+          </a>
           <div class="pull-right">
             <a href="#/contact">
               <strong class="contact">
@@ -51,18 +54,7 @@
     </div>
     <!-- /.row -->
 
-    <!-- Projects Row -->
-    <div class="row">
-      <div class="col-md-4 portfolio-item" ng-repeat="item in items">
-        <a href="#">
-          <img class="img-responsive" ng-src="/images/home/{{ item.imgurl }}" alt="">
-        </a>
-        <h3 class="item">
-          <a href="#">{{ item.name }}</a>
-        </h3>
-      </div>
-    </div>
-    <!-- /.row -->
+    <div ng-view></div>
 
     <hr>
 
@@ -80,6 +72,7 @@
   <!-- /.container -->
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-route.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
 
