--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="dianawon">
 
   <title>Diana Won</title>
+  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
@@ -43,10 +44,8 @@
             Diana Won
           </a>
           <div class="pull-right">
-            <a href="#/contact">
-              <strong class="contact">
-                contact
-              </strong>
+            <a href="#/contact" class="contact">
+              contact
             </a>
           </div>
         </h1>
