add social media tags

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,23 @@
   <title>Diana Won</title>
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="Diana Won Graphic Design">
+  <meta name="twitter:site" content="@dubbitydubbit">
+  <meta name="twitter:title" content="Diana Won Graphic Design">
+  <meta name="twitter:creator" content="@dubbitydubbity">
+
+  <-- Twitter Summary card images must be at least 120x120px -->
+  <meta name="twitter:image" content="http://www.dianawon.com/images/home.png">
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Diana Won Graphic Design" />
+  <meta property="og:type" content="portfolio" />
+  <meta property="og:url" content="http://www.dianawon.com/" />
+  <meta property="og:image" content="http://dianawon.com/images/home.jpg" />
+  <meta property="og:description" content="Diana Won Graphic Design" /> 
+  <meta property="og:site_name" content="dianawon" />
+
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
 
