--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
   <meta name="twitter:title" content="Diana Won Graphic Design">
   <meta name="twitter:creator" content="@dubbitydubbity">
 
-  <-- Twitter Summary card images must be at least 120x120px -->
+  <!-- Twitter Summary card images must be at least 120x120px -->
   <meta name="twitter:image" content="http://www.dianawon.com/images/home.png">
 
   <!-- Open Graph data -->
