update home img

--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
   <meta property="og:title" content="Diana Won Graphic Design" />
   <meta property="og:type" content="portfolio" />
   <meta property="og:url" content="http://www.dianawon.com/" />
-  <meta property="og:image" content="http://dianawon.com/images/home.jpg" />
+  <meta property="og:image" content="http://dianawon.com/images/home.png" />
   <meta property="og:description" content="Diana Won Graphic Design" /> 
   <meta property="og:site_name" content="dianawon" />
 
