--- a/static/index.html
+++ b/static/index.html
@@ -58,7 +58,7 @@
       <div class="col-lg-12">
         <h1 class="page-header">
           <a href="#/">
-            Diana Won
+            <img src="/images/logo.png" id="logo">
           </a>
           <div class="pull-right">
             <a href="#/contact" class="contact">
