--- a/static/index.html
+++ b/static/index.html
@@ -31,6 +31,7 @@
 
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <!-- Font -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Josefin+Slab:400,700">
@@ -58,7 +59,7 @@
       <div class="col-lg-12">
         <h1 class="page-header">
           <a href="#/">
-            <img src="/images/logo.png" id="logo">
+            <img src="/images/logo_update_1.png" style="max-height: 60px;">
           </a>
           <div class="pull-right">
             <a href="#/contact" class="contact">
