mobile style updates for logo

--- a/static/index.html
+++ b/static/index.html
@@ -59,9 +59,9 @@
       <div class="col-lg-12">
         <h1 class="page-header">
           <a href="#/">
-            <img src="/images/logo_update_1.png" style="max-height: 60px;">
+            <img src="/images/logo_update_1.png" id="logo">
           </a>
-          <div class="pull-right">
+          <div class="pull-right contact-wrap">
             <a href="#/contact" class="contact">
               contact
             </a>
