--- a/static/index.html
+++ b/static/index.html
@@ -59,7 +59,7 @@
       <div class="col-lg-12">
         <h1 class="page-header">
           <a href="#/">
-            <img src="/images/logo_update_1.png" id="logo">
+            <img src="/images/diana_won.png" id="logo">
           </a>
           <div class="pull-right contact-wrap">
             <a href="#/contact" class="contact">
