--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="Diana Won Graphic Design">
-  <meta name="twitter:site" content="@dubbitydubbit">
+  <meta name="twitter:site" content="@dubbitydubbity">
   <meta name="twitter:title" content="Diana Won Graphic Design">
   <meta name="twitter:creator" content="@dubbitydubbity">
 
