more meta tag updates

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="diana won graphic designer">
+  <meta name="description" content="diana won graphic designer oakland">
   <meta name="author" content="dianawon">
 
   <title>Diana Won</title>
@@ -17,15 +17,13 @@
   <meta name="twitter:site" content="@dubbitydubbity">
   <meta name="twitter:title" content="Diana Won Graphic Design">
   <meta name="twitter:creator" content="@dubbitydubbity">
-
-  <!-- Twitter Summary card images must be at least 120x120px -->
-  <meta name="twitter:image" content="http://www.dianawon.com/images/home.png">
+  <meta name="twitter:image" content="http://dianawon.com/images/diana_won.png">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="Diana Won Graphic Design" />
   <meta property="og:type" content="portfolio" />
   <meta property="og:url" content="http://www.dianawon.com/" />
-  <meta property="og:image" content="http://dianawon.com/images/home.png" />
+  <meta property="og:image" content="http://dianawon.com/images/diana_won.png" />
   <meta property="og:description" content="Diana Won Graphic Design" /> 
   <meta property="og:site_name" content="dianawon" />
 
